--- a/css/style.css
+++ b/css/style.css
@@ -3,19 +3,25 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
+}
+
+body {
+  position: relative;
   color: #515076FF;
 }
 
-.main {
-  max-width: 1280px;
-  min-height: 1715px;
-  margin: 0 auto;
+.link {
+  text-decoration: none;
+  color: #FFFFFF;
 }
 
 .container {
-  padding-top: 220px;
-  background-image: url("/image/dandelions.png");
-  background-position: 85px -75px;
-  background-repeat: no-repeat;
-  background-size: initial;
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+.footer {
+  min-height: 477px;
+  background-color: #3A3A3A;
+  color: #FFFFFF;
 }
